[gd_scene load_steps=20 format=2]

[ext_resource path="res://Shaders/SelectShader.shader" type="Shader" id=1]
[ext_resource path="res://Scenes/ShellsScene/CupLeft.gd" type="Script" id=2]
[ext_resource path="res://Scenes/ShellsScene/CupCenter.gd" type="Script" id=3]
[ext_resource path="res://Scenes/ShellsScene/CupGame.gd" type="Script" id=4]
[ext_resource path="res://Scenes/ShellsScene/CupRight.gd" type="Script" id=5]
[ext_resource path="res://Textures/Battle/Cup.png" type="Texture" id=6]
[ext_resource path="res://Textures/Battle/Heart.png" type="Texture" id=7]
[ext_resource path="res://Scenes/ShellsScene/ShellsScene.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "CenterLeft"
length = 0.5
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("ShellGame/CupCenter:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 157, -0.25, 0, 0.25, 0, 93, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ShellGame/CupCenter:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 76, -0.25, 0, 0.24998, -56.278, 76, -0.25002, -56.278, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ShellGame/CupLeft:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 93, -0.25, 0, 0.25, 0, 157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ShellGame/CupLeft:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 76, -0.25, 0, 0.249393, 48.1781, 76, -0.251911, 48.1781, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ShellGame/CupRight:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 221, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ShellGame/CupRight:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 76, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "CenterRight"
length = 0.5
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("ShellGame/CupCenter:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 157, -0.25, 0, 0.25, 0, 221, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ShellGame/CupCenter:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 76, -0.25, 0, 0.24862, -56.0167, 76, -0.25138, -56.0167, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ShellGame/CupRight:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 221, -0.25, 0, 0.25, 0, 157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ShellGame/CupRight:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 76, -0.25, 0, 0.242894, 43.7899, 76, -0.257106, 43.5108, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ShellGame/CupLeft:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 93, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ShellGame/CupLeft:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 76, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "LeftRight"
length = 0.5
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("ShellGame/CupLeft:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 93, -0.25, 0, 0.25, 0, 221, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ShellGame/CupLeft:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 76, -0.25, 0, 0.249393, 89.0426, 76, -0.250607, 89.0426, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ShellGame/CupRight:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 221, -0.25, 0, 0.25, 0, 93, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ShellGame/CupRight:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 76, -0.25, 0, 0.249393, -91.5143, 76, -0.250607, -91.5143, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ShellGame/CupCenter:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ShellGame/CupCenter:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 76, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "Load"
tracks/0/type = "value"
tracks/0/path = NodePath("ShellGame:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 6, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShellGame/Heart:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ShellGame/Heart:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 174, 109.5 ) ]
}

[sub_resource type="Animation" id=5]
length = 1.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ShellGame/CupCenter:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.3 ),
"transitions": PoolRealArray( 0.3, -6, 1 ),
"update": 0,
"values": [ Vector2( 157, 76 ), Vector2( 157, 52 ), Vector2( 157, 76 ) ]
}

[sub_resource type="Animation" id=6]
length = 1.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ShellGame/CupLeft:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.3 ),
"transitions": PoolRealArray( 0.3, -6, 1 ),
"update": 0,
"values": [ Vector2( 93, 76 ), Vector2( 93, 52 ), Vector2( 93, 76 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ShellGame/CupRight:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1.3 ),
"transitions": PoolRealArray( 0.3, -6, 1 ),
"update": 0,
"values": [ Vector2( 221, 76 ), Vector2( 221, 52 ), Vector2( 221, 76 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Unload"
tracks/0/type = "value"
tracks/0/path = NodePath("ShellGame:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.3, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ShellGame/Heart:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 1 )
shader_param/enabled = false

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 1 )
shader_param/enabled = false

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 1 )
shader_param/enabled = null

[node name="ShellsScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CenterLeft = SubResource( 1 )
anims/CenterRight = SubResource( 2 )
anims/LeftRight = SubResource( 3 )
anims/Load = SubResource( 4 )
anims/ShowCenter = SubResource( 5 )
anims/ShowLeft = SubResource( 6 )
anims/ShowRight = SubResource( 7 )
anims/Unload = SubResource( 8 )

[node name="ShellGame" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
animation_player = NodePath("../../ShellsScene/AnimationPlayer")
InputBlocker = NodePath("../InputBlocker")

[node name="Heart" type="TextureRect" parent="ShellGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = 6.0
margin_right = 10.0
margin_bottom = 26.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CupLeft" type="TextureRect" parent="ShellGame"]
material = SubResource( 9 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -27.5
margin_right = 27.0001
margin_bottom = 27.5001
texture = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
animation_player = NodePath("../../../ShellsScene/AnimationPlayer")

[node name="CupCenter" type="TextureRect" parent="ShellGame"]
material = SubResource( 10 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -27.5
margin_right = -33.0
margin_bottom = 31.5
texture = ExtResource( 6 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
animation_player = NodePath("../../../ShellsScene/AnimationPlayer")

[node name="CupRight" type="TextureRect" parent="ShellGame"]
material = SubResource( 11 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 37.0
margin_top = -27.5
margin_right = 91.0001
margin_bottom = 27.5001
texture = ExtResource( 6 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
animation_player = NodePath("../../../ShellsScene/AnimationPlayer")

[node name="InputBlocker" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="ShellGame/CupLeft" to="ShellGame/CupLeft" method="_on_CupLeft_gui_input"]
[connection signal="left_cup_selected" from="ShellGame/CupLeft" to="ShellGame" method="_on_cup_selected"]
[connection signal="mouse_entered" from="ShellGame/CupLeft" to="ShellGame/CupLeft" method="_on_CupLeft_mouse_entered"]
[connection signal="mouse_exited" from="ShellGame/CupLeft" to="ShellGame/CupLeft" method="_on_CupLeft_mouse_exited"]
[connection signal="center_cup_selected" from="ShellGame/CupCenter" to="ShellGame" method="_on_cup_selected"]
[connection signal="gui_input" from="ShellGame/CupCenter" to="ShellGame/CupCenter" method="_on_CupCenter_gui_input"]
[connection signal="mouse_entered" from="ShellGame/CupCenter" to="ShellGame/CupCenter" method="_on_CupCenter_mouse_entered"]
[connection signal="mouse_exited" from="ShellGame/CupCenter" to="ShellGame/CupCenter" method="_on_CupCenter_mouse_exited"]
[connection signal="gui_input" from="ShellGame/CupRight" to="ShellGame/CupRight" method="_on_CupRight_gui_input"]
[connection signal="mouse_entered" from="ShellGame/CupRight" to="ShellGame/CupRight" method="_on_CupRight_mouse_entered"]
[connection signal="mouse_exited" from="ShellGame/CupRight" to="ShellGame/CupRight" method="_on_CupRight_mouse_exited"]
[connection signal="right_cup_selected" from="ShellGame/CupRight" to="ShellGame" method="_on_cup_selected"]
